增加一个简单的登陆界面。
